--- a/notebooks/day2/02_data_exploration.ipynb
+++ b/notebooks/day2/02_data_exploration.ipynb
@@ -96,14 +96,14 @@
     "    5. standard deviation\n",
     "    6. number of unique values\n",
     "    '''\n",
-    "    print \"=\"*80\n",
-    "    print \"Summary Statistics\"\n",
-    "    print \"=\"*80\n",
+    "    print(\"=\" * 80)\n",
+    "    print(\"Summary Statistics\")\n",
+    "    print(\"=\" * 80)\n",
     "    for stat in summary_stats:\n",
     "        attr = series.__getattribute__(stat)\n",
     "        value = attr()\n",
-    "        print stat.capitalize() + \":\" + \"\\t\" + str(value)\n",
-    "    print \"=\"*80"
+    "        print(stat.capitalize() + \":\" + \"\\t\" + str(value))\n",
+    "    print(\"=\" * 80)"
    ]
   },
   {
@@ -332,8 +332,8 @@
     "    b = df[df[colorby]==False]\n",
     "    fig = plt.figure(figsize=(20,10))\n",
     "    axes = fig.add_subplot(111)\n",
-    "    pd.tools.plotting.scatter_plot(a, x, y, ax=axes, color='0',label='Male')\n",
-    "    pd.tools.plotting.scatter_plot(b, x, y, ax=axes, color='0.5', label='Female')\n",
+    "    pd.tools.plotting.scatter_plot(a, x, y, ax=axes, c='0',label='Male')\n",
+    "    pd.tools.plotting.scatter_plot(b, x, y, ax=axes, c='0.5', label='Female')\n",
     "    plt.legend()\n",
     "    plt.grid()\n",
     "    plt.show()"
@@ -365,21 +365,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
