--- a/notebooks/day2/03_regression_in_pandas.ipynb
+++ b/notebooks/day2/03_regression_in_pandas.ipynb
@@ -83,7 +83,7 @@
    },
    "outputs": [],
    "source": [
-    "print longevity.head()"
+    "longevity.head()"
    ]
   },
   {
@@ -175,9 +175,9 @@
    "outputs": [],
    "source": [
     "mse = mean_squared_error(longevity)\n",
-    "print mse.min()\n",
+    "print(mse.min())\n",
     "rmse = root_mean_squared_error(longevity)\n",
-    "print rmse.min()"
+    "print(rmse.min())"
    ]
   },
   {
@@ -229,17 +229,17 @@
     "    \"\"\"\n",
     "    advertised = df[df['HasAdvertising']=='Yes']\n",
     "    nonadvert = df[df['HasAdvertising']=='No']\n",
-    "    print \"Sites with advertising:\"\n",
-    "    print \"=\"*80\n",
-    "    print \"Highest Rank\" + 2*\"\\t\", advertised['Rank'].min()\n",
-    "    print \"Mean PageViews\" + 2*\"\\t\", advertised['PageViews'].mean()\n",
-    "    print \"Mean UniqueVisitors\" + \"\\t\", advertised['UniqueVisitors'].mean()\n",
-    "    print \"\\n\"\n",
-    "    print \"Sites w/o advertising:\"\n",
-    "    print \"=\"*80\n",
-    "    print \"Highest Rank\" + 2*\"\\t\", nonadvert['Rank'].min()\n",
-    "    print \"Mean PageViews\" + 2*\"\\t\", nonadvert['PageViews'].mean()\n",
-    "    print \"Mean UniqueVisitors\" + \"\\t\", nonadvert['UniqueVisitors'].mean()"
+    "    print(\"Sites with advertising:\")\n",
+    "    print(\"=\" * 80)\n",
+    "    print(\"Highest Rank\" + 2*\"\\t\", advertised['Rank'].min())\n",
+    "    print(\"Mean PageViews\" + 2*\"\\t\", advertised['PageViews'].mean())\n",
+    "    print(\"Mean UniqueVisitors\" + \"\\t\", advertised['UniqueVisitors'].mean())\n",
+    "    print(\"\\n\")\n",
+    "    print(\"Sites w/o advertising:\")\n",
+    "    print(\"=\" * 80)\n",
+    "    print(\"Highest Rank\" + 2*\"\\t\", nonadvert['Rank'].min())\n",
+    "    print(\"Mean PageViews\" + 2*\"\\t\", nonadvert['PageViews'].mean())\n",
+    "    print(\"Mean UniqueVisitors\" + \"\\t\", nonadvert['UniqueVisitors'].mean())"
    ]
   },
   {
@@ -289,7 +289,7 @@
     "pd.tools.plotting.scatter_plot(pageviews, 'UniqueVisitors', 'PageViews', ax=axes, grid=True)\n",
     "pols = pd.ols(x=pageviews['UniqueVisitors'],y=pageviews['PageViews'])\n",
     "pageviews['estimate'] = pols.y_fitted\n",
-    "pageviews.plot('UniqueVisitors','estimate',c='g',lw=5)\n",
+    "pageviews.plot('UniqueVisitors','estimate',c='g',lw=5, ax=axes)\n",
     "plt.show()"
    ]
   },
@@ -309,22 +309,23 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
