--- a/notebooks/day2/01_basic_data_structs.ipynb
+++ b/notebooks/day2/01_basic_data_structs.ipynb
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "s = pd.Series(range(10))\n",
-    "print s"
+    "print(s)"
    ]
   },
   {
@@ -82,7 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "print s[5]"
+    "print(s[5])"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "source": [
     "inds = ['bar',1, (1, 2)]\n",
     "s.index = inds\n",
-    "print s['bar'], s[1], s[(1, 2)]"
+    "print(s['bar'], s[1], s[(1, 2)])"
    ]
   },
   {
@@ -141,7 +141,7 @@
     "s1 = pd.Series(range(10))\n",
     "s2 = pd.Series(range(10,20))\n",
     "df = pd.DataFrame({'A':s1,'B':s2})\n",
-    "print df.head()"
+    "df.head()"
    ]
   },
   {
@@ -159,8 +159,8 @@
    },
    "outputs": [],
    "source": [
-    "df['C'] = map(str, range(20,30))\n",
-    "print df.head()"
+    "df['C'] = [str(c) for c in range(20, 30)]\n",
+    "print(df.head())"
    ]
   },
   {
@@ -171,7 +171,7 @@
    },
    "outputs": [],
    "source": [
-    "print df['C']"
+    "print(df['C'])"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "del df['A']\n",
-    "print df.head(10)"
+    "print(df.head(10))"
    ]
   },
   {
@@ -194,8 +194,8 @@
    },
    "outputs": [],
    "source": [
-    "df.update({'D':range(50,60)})\n",
-    "print df.head()"
+    "df.update({'B': range(50,60)})\n",
+    "print(df.head())"
    ]
   },
   {
@@ -248,22 +248,23 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
