--- a/notebooks/day2/04_time_series_in_pandas.py.ipynb
+++ b/notebooks/day2/04_time_series_in_pandas.py.ipynb
@@ -80,7 +80,7 @@
    },
    "outputs": [],
    "source": [
-    "print ts['1/1/2000']"
+    "print(ts['1/1/2000'])"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "source": [
     "# Create a datetime object\n",
     "dt = date(2000,1,1)\n",
-    "print ts[dt]"
+    "print(ts[dt])"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "# Slicing a timeseries by dates:\n",
-    "print ts['1/1/2000':'31/1/2000']"
+    "print(ts['1/1/2000':'31/1/2000'])"
    ]
   },
   {
@@ -176,11 +176,11 @@
    "outputs": [],
    "source": [
     "# Upsampling and downsampling\n",
-    "print ts.index.freq\n",
+    "print(ts.index.freq)\n",
     "upsampled = ts.resample('12H',fill_method='bfill')\n",
     "downsampled = ts.resample('M')\n",
-    "print upsampled.shape\n",
-    "print downsampled.shape\n",
+    "print(upsampled.shape)\n",
+    "print(downsampled.shape)\n",
     "fig, axes = plt.subplots(3,1, figsize=(20,10))\n",
     "ts.plot(ax=axes[0],title='Original Data')\n",
     "upsampled.plot(ax=axes[1],title='Upsampled Data')\n",
@@ -241,22 +241,23 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
