--- a/src/ipython_plotting.tex
+++ b/src/ipython_plotting.tex
@@ -4,6 +4,7 @@
 \mode<presentation>
 {
   \usetheme{Warsaw}
+  \usecolortheme[named=orange]{structure}
   \useoutertheme{infolines}
   \setbeamercovered{transparent}
 }
@@ -29,7 +30,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Macros
-\setbeamercolor{emphbar}{bg=blue!20, fg=black}
+\setbeamercolor{emphbar}{bg=orange!20, fg=black}
 \newcommand{\emphbar}[1]
 {\begin{beamercolorbox}[rounded=true]{emphbar}
       {#1}
@@ -49,9 +50,11 @@
 
 \author[Jaidev Deshpande] {Jaidev Deshpande}
 
-\institute[JSM Analytics Pvt Ltd] {INMANTEC Institutes\\Dr A P J Abdul Kalam
-Technical University}
-\date[] {Ghaziabad, India
+\institute[jaidev@jsm.email] {Juxt SmartMandate Analytical Solutions Pvt
+Ltd}
+
+\titlegraphic{\includegraphics[width=2cm]{jsm_logo}\hspace*{4.75cm}~%
+   \includegraphics[width=2cm]{INMANTEC-1}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -101,14 +104,15 @@ Technical University}
     \frametitle{Acknowledgement}
     \Large
     \begin{center}
-        \alert{Dr Prabhu Ramachandran}\\
+        Special thanks to\\
+        Dr Prabhu Ramachandran\\
         and\\
-        \alert{FOSSEE group (\url{fossee.in})} \\
-        based at\\
-        \alert{IIT Bombay}\\
+        FOSSEE group (\url{fossee.in}) \\
+        at\\
+        IIT Bombay\\
         and funded by\\
         The National Mission on Education through ICT, \\
-        \alert{Ministry of HRD, India}
+        Ministry of HRD, India
     \end{center}
 \end{frame}
 
