Add download link in slides

--- a/src/intro.tex
+++ b/src/intro.tex
@@ -119,7 +119,7 @@ Ltd}
     \item Python
     \item IPython
     \item pip / conda
-    \item Material from http://jaidevd.github.io/downloads
+    \item Material from \url{https://github.com/jaidevd/inmantec_fdp/archive/master.zip}
   \end{enumerate}
 \end{frame}
 
