--- a/notebooks/day1/03_intro_stats.ipynb
+++ b/notebooks/day1/03_intro_stats.ipynb
@@ -113,7 +113,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise: Verify the law of large numbers"
+    "# Exercise: Verify the law of large numbers\n",
+    "## Plot the error between actual and estimated mean and covariance for each sample size."
    ]
   },
   {
