--- a/notebooks/day1/04_intro_scikit_image.ipynb
+++ b/notebooks/day1/04_intro_scikit_image.ipynb
@@ -119,8 +119,7 @@
     "bins = 0.5*(bins[1:] + bins[:-1])\n",
     "plt.plot(bins, hist, label=\"original\")\n",
     "estimate = uniform.pdf(bins)\n",
-    "plt.plot(bins, estimate, label=\"estimate\")\n",
-    "plt.legend()"
+    "plt.plot(bins, estimate, label=\"uniform estimate\")"
    ]
   },
   {
@@ -380,7 +379,6 @@
    },
    "outputs": [],
    "source": [
-    "# further proof that these are indeed independent entities\n",
     "from skimage.measure import regionprops\n",
     "import matplotlib.patches as mpatches\n",
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
@@ -397,6 +395,45 @@
     "\n",
     "ax.set_axis_off()\n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise: Color each independent region in the following image\n",
+    "### Note: Image is entireyly only black and white. It has already been thresholded and binaried"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "n = 20\n",
+    "l = 256\n",
+    "im = np.zeros((l, l))\n",
+    "points = l * np.random.random((2, n ** 2))\n",
+    "im[(points[0]).astype(np.int), (points[1]).astype(np.int)] = 1\n",
+    "im = filters.gaussian_filter(im, sigma=l / (4. * n))\n",
+    "blobs = im > im.mean()\n",
+    "plt.imshow(blobs, cmap=plt.cm.gray)\n",
+    "plt.xticks([])\n",
+    "plt.yticks([])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# enter code here"
    ]
   }
  ],
